# ooctl

./: .gitignore  MANIFEST.in  README.md  oc  pyproject.toml  run
.github/workflows/: ci.yml
commands/format/: desc  run
commands/install/: desc  run
commands/lint/: desc  run
commands/quality/: desc  run
commands/test/: desc  run
commands/venv-status/: desc  run
launchd/: com.jason.occtl.relay.plist  com.jason.occtl.watch.plist
occtl/: cli.py  clipboard.py  config.py  mailbox.py  notify.py  relay.py  tmux.py  voice.py
scripts/: install.sh  install_launchd.sh
tests/: conftest.py  test_cli.py  test_clipboard.py  test_tmux.py  test_voice.py
